[gd_scene load_steps=10 format=3 uid="uid://chgri8qhiimod"]

[ext_resource type="Shader" path="res://singletons/pauseMenuBlur.gdshader" id="1_1jfk8"]
[ext_resource type="Script" path="res://singletons/pauseMenu.gd" id="1_fu6bq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kf58p"]
shader = ExtResource("1_1jfk8")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_l0mka"]
device = -1
pressed = true
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_r7csu"]
events = [SubResource("InputEventKey_l0mka")]

[sub_resource type="Animation" id="Animation_bvgvf"]
resource_name = "Pause"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1e00h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3cwwh"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ajfw"]
_data = {
"Pause": SubResource("Animation_bvgvf"),
"RESET": SubResource("Animation_1e00h"),
"Unpause": SubResource("Animation_3cwwh")
}

[node name="pauseMenu" type="ColorRect"]
process_mode = 3
z_index = 10
material = SubResource("ShaderMaterial_kf58p")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fu6bq")

[node name="menu" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="menu"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="menu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="resumeButton" type="Button" parent="menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
action_mode = 0
shortcut = SubResource("Shortcut_r7csu")
text = "Resume
"

[node name="saveButton" type="Button" parent="menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="loadButton" type="Button" parent="menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="quitButton" type="Button" parent="menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_8ajfw")
}

[node name="confirm" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer2" type="CenterContainer" parent="confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -128.0
offset_right = 256.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="confirm/CenterContainer2"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="confirm/CenterContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="confirm/CenterContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Are you sure?"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="yesButton" type="Button" parent="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "YES"

[node name="HSeparator2" type="HSeparator" parent="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="noButton" type="Button" parent="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "NO"

[node name="LoadScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LoadScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="HBoxContainer" type="HBoxContainer" parent="LoadScreen/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="LoadScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="save1" type="Button" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer/save1"]
layout_mode = 2
offset_right = 424.0
offset_bottom = 696.0
theme_override_constants/separation = 32

[node name="saveNumber1" type="Label" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer/save1/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "1"
horizontal_alignment = 1

[node name="playerName1" type="Label" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer/save1/VBoxContainer"]
layout_mode = 2
text = "Player Name"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="LoadScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="save2" type="Button" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer2/save2"]
layout_mode = 2
offset_right = 424.0
offset_bottom = 696.0
theme_override_constants/separation = 32

[node name="saveNumber2" type="Label" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer2/save2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "2"
horizontal_alignment = 1

[node name="playerName2" type="Label" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer2/save2/VBoxContainer"]
layout_mode = 2
text = "Player Name"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="LoadScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="save3" type="Button" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer3/save3"]
layout_mode = 2
offset_right = 424.0
offset_bottom = 696.0
theme_override_constants/separation = 32

[node name="saveNumber3" type="Label" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer3/save3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "3"
horizontal_alignment = 1

[node name="playerName3" type="Label" parent="LoadScreen/MarginContainer/HBoxContainer/MarginContainer3/save3/VBoxContainer"]
layout_mode = 2
text = "Player Name"
horizontal_alignment = 1

[node name="backButton" type="Button" parent="LoadScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -96.0
offset_right = 78.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Back"

[connection signal="pressed" from="menu/PanelContainer/MarginContainer/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="button_up" from="menu/PanelContainer/MarginContainer/VBoxContainer/saveButton" to="." method="_on_save_button_button_up"]
[connection signal="button_up" from="menu/PanelContainer/MarginContainer/VBoxContainer/loadButton" to="." method="_on_load_button_button_up"]
[connection signal="button_up" from="menu/PanelContainer/MarginContainer/VBoxContainer/quitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/yesButton" to="." method="_on_yes_button_button_up"]
[connection signal="button_up" from="confirm/CenterContainer2/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/noButton" to="." method="_on_no_button_button_up"]
[connection signal="pressed" from="LoadScreen/MarginContainer/HBoxContainer/MarginContainer/save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="LoadScreen/MarginContainer/HBoxContainer/MarginContainer2/save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="LoadScreen/MarginContainer/HBoxContainer/MarginContainer3/save3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="LoadScreen/backButton" to="." method="_on_back_button_pressed"]
