extends ColorRect

@onready var animation_player: AnimationPlayer = $AnimationPlayer

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass

func _on_quit_button_button_up():
	get_tree().quit()

func _pause():
	animation_player.play("Pause")
	get_tree().paused = true
	Input.mouse_mode = Input.MOUSE_MODE_VISIBLE

func _unPause():
	animation_player.play("Unpause")
	get_tree().paused = false
	Input.mouse_mode = Input.MOUSE_MODE_CAPTURED

func _on_resume_button_pressed():
	_unPause()


func _on_save_button_button_up():
	showConfirmDialogue("save")

func showConfirmDialogue(option):
	pass

func _on_load_button_button_up():
	showConfirmDialogue("load")
